something wrong with boost serialization

--- a/makefile.valgrind
+++ b/makefile.valgrind
@@ -30,10 +30,12 @@ OBJ	= $(CPPSRC:.cpp=.o)
 
 BRIGHT_ROOT= .
 
+BTASLIB= /home/bright/btas/lib
+
 INCLUDE = ./include
 
 #LIBS= -lpthread -lmkl_intel_lp64 -lmkl_intel_thread -lmkl_core
-LIBS= -lblas -llapacke -lboost_serialization
+LIBS= -lblas -llapacke
 
 CC	= gcc
 CXX	= g++
