--- a/makefile.valgrind
+++ b/makefile.valgrind
@@ -9,13 +9,12 @@
 # -----------------------------------------------------------------------------
 BINNAME = peps
 CPPSRC	= main.cpp\
+           global.cpp\
            Random.cpp\
-           Lattice.cpp\
            PEPS.cpp\
            MPS.cpp\
            MPO.cpp\
            compress.cpp\
-           Global.cpp\
            Environment.cpp\
            Heisenberg.cpp\
            Trotter.cpp\
@@ -37,8 +36,8 @@ INCLUDE = ./include
 #LIBS= -lpthread -lmkl_intel_lp64 -lmkl_intel_thread -lmkl_core
 LIBS= -lblas -llapacke
 
-CC	= gcc
-CXX	= g++
+CC	= clang
+CXX	= clang++
 
 # -----------------------------------------------------------------------------
 #   Compiler & Linker flags
