added Hamiltonian class for more general nn-interaction

--- a/makefile.intel
+++ b/makefile.intel
@@ -9,6 +9,7 @@
 # -----------------------------------------------------------------------------
 BINNAME = peps
 CPPSRC	= main.cpp\
+			  Hamiltonian.cpp\
 			  global.cpp\
            Random.cpp\
            PEPS.cpp\
