--- a/makefile.intel
+++ b/makefile.intel
@@ -33,7 +33,7 @@ BTASLIB= /home/bright/btas/lib
 
 INCLUDE = ./include
 
-LIBS= -lpthread -lmkl_intel_lp64 -lmkl_sequential -lmkl_core
+LIBS= -lpthread -lmkl_intel_lp64 -lmkl_intel_thread -lmkl_core
 #LIBS= -lblas -llapacke
 
 CC	= icc
